[tool.poetry]
name = "repl_python3_cocExtractSC"
version = "0.1.0"
description = ""
authors = ["roshan1337d <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pylzham = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
